--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,12 @@ set(MY_CMAKE_PROJECT_VERSION_MINOR 0)
 include_directories("${PROJECT_BINARY_DIR}")
 
 # compile and include Logger Library
-include_directories("${PROJECT_SOURCE_DIR}/logger")
-add_library(Logger "${PROJECT_SOURCE_DIR}/logger/logger.cpp")
+include_directories("${PROJECT_SOURCE_DIR}/src/logger")
+add_library(Logger "${PROJECT_SOURCE_DIR}/src/logger/logger.cpp")
 
 # configure a header file to pass some of the CMake settings
 # to the source code
-configure_file("${PROJECT_SOURCE_DIR}/Config.h.in" "${PROJECT_BINARY_DIR}/Config.h")
+configure_file("${PROJECT_SOURCE_DIR}/src/Config.h.in" "${PROJECT_BINARY_DIR}/Config.h")
 
-add_executable(my_cmake_project "${PROJECT_SOURCE_DIR}/main.cpp")
+add_executable(my_cmake_project "${PROJECT_SOURCE_DIR}/src/main.cpp")
 target_link_libraries(my_cmake_project Logger)
